# google-photos-metadata-fix

./: .gitignore  .nvim-dap.lua  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  run.py  utils.py
src/: file_utils.py  lib.py  print_utils.py  utils.py
src/tests/: test_file_utils.py  test_lib.py  test_utils.py  tools_for_testing.py
test_assets/: TEST_HEIC-edited.HEIC  TEST_HEIC.HEIC  TEST_HEIC.HEIC.json  TEST_JPG.jpg.json
tests/: test_integration.py
